limit breadcrumbs size to avoid long resources title overflowing in most cases

--- a/app/assets/stylesheets/para/admin/src/_breadcrumb.sass
+++ b/app/assets/stylesheets/para/admin/src/_breadcrumb.sass
@@ -7,11 +7,21 @@
 //## Just a override of bootstrap
 
 .breadcrumb
+  float: left
+  width: calc(100% - 90px)
+  max-height: 60px
+  margin: 0
+
   border: none
   +border-radius(0)
-  margin: 0
-  float: left
+
   li
+    max-width: 30%
+    height: 60px
+    overflow: hidden
+    text-overflow: ellipsis
+    white-space: nowrap
+
     a
       color: $breadcrumb-color
       font-size: 1em
